mustache/voting/static/css/custom.css
/* custom.css */

body { background-color: #fff; }

@media (max-width: 720px) {
	body { text-align: center; }
}

body,h1,h2,h3,h4 {
    font-family: "Belleza", "Helvetica Neue", Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -webkit-text-stroke: 0.1px rgba(0,0,0,0.1);
    color: #444;
}

h1 { color: #7C5A3C; text-shadow: 1px 1px 3px rgba(0,0,0,0.2); }

h2 { font-size: 40px; }

label { font-weight: 400; }

.pointer { cursor: pointer; }

.comments { text-align: left; padding: 1em; }

.comments [id^="comments"],
.comments [id^="comments"] p
{ margin-left: 1em; }

.comments form,
.comments p
{ margin-top: 1em; }

.comments h4 {
	border-bottom: solid 1px #ddd;
	margin-bottom: 0;
	box-shadow: 0 5px 12px -3px rgba(0,0,0,0.1);
}


.or {
	border: solid 1px #aaa;
	border-radius: 15px;
	background-color: #f1edd0;
	color: #444;
	font-weight: bold;
	padding: 3px 5px;
}

